2004-01-11  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* tools/sane-desc.c: When generating HTML anchor names, make sure
	  they are unique. Bug #300439.
	* doc/descriptions/qcam.desc doc/descriptions/unsupported.desc:
	  Fixed some broken links.

2004-01-10  Julien BLACHE <jb@jblache.org>
	* sanei/sanei_pa4s2.c: libieee1284 support for scsi_pp functions.
	This is untested but should work.

2004-01-10  Oliver Rauch <oliver.rauch@rauch-domain.de>
	* doc/umax: corrected links in umax documentations

2004-01-09  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/sane-config.man: Only one option can be used at the same
	  time.
	* doc/descriptions/unsupported.desc: Added HP Scanjet 4600 and
	  Quato scanners. Updated Epson 1270.

2004-01-09  Gerhard Jaeger <gerhard@gjaeger.de>
	* doc/u12/U12.changes: initial checkin.
	* doc/sane-u12.man doc/sane-plustek.man doc/sane-plustek_pp: added
	  ENVIRONMENT information and did some minor updates.
	* descriptions/plustek_pp.desc descriptions/u12.desc: status updates.
	* po/sane-backends.de.po: fixed wrong translation.
	* doc/plustek/Plustek-USB.changes: update.
	* doc/plustek/Plustek-PARPORT-TODO.txt: update.
	* doc/Makefile.in: added u12 subdirectory.
	* backend/plustek.[ch] backend/plustek-usb*.[ch]: copyright updates
	  and some changes concerning the CanoScan lamp calibration.
	* backend/u12.[ch] backend/u12-*.[ch]: copyright updates.
	* backend/plustek_pp.[ch] backend/plustek-pp*.[ch]: copyright updates
	  and minor fixes.

2004-01-08  Oliver Rauch <oliver.rauch@rauch-domain.de>
	* backend/umax.c: changed order of includes because of compilation error

2004-01-07  Oliver Rauch <oliver.rauch@rauch-domain.de>
	* backend/umax.c: disabled quality calibration for Astra 2200 SU via USB

2004-01-05  Gerhard Jaeger <gerhard@gjaeger.de>
	* configure configure.in: added new u12 backend.
	* AUTHORS: added myself as u12 backend author.
	* backend/Makefile.in: added new backend u12.