@@ -49,6 +49,10 @@
    Simon Krix <kinsei@users.sourceforge.net>
    */
 
+#ifndef NOSANE
+#include "../include/sane/config.h"
+#endif
+
 #include <sys/time.h>
 #include <unistd.h>
 #include <ieee1284.h>
@@ -71,7 +75,10 @@ static void DBG(int level, const char *format, ...)
 #else
 
 /* Definitions which only apply to SANE compiles */
+#ifndef VERSION
 #define VERSION "$Revision$"
+#endif
+
 /* Fix problem with DBG macro definition having a - in the name */
 #define DEBUG_DECLARE_ONLY
 #include "canon_pp.h"
